hold onto your butts

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,10 +70,39 @@ ul {
   height: 1px;
 }
 
+.hr-line-light {
+  background-color: var(--primary);
+  height: 1px;
+}
+
+.hr-line-ochre {
+  background-color: var(--ochre);
+  height: 1px;
+}
+
 .square {
   background-color: var(--budding);
   height: 70px;
   width:70px;
+}
+
+.square-ochre {
+  background-color: var(--ochre);
+  height: 70px;
+  width:70px;
+}
+
+.bg-dark {
+  background-color: var(--secondary);
+}
+
+.bg-dark > h1, h2, h3, h4, h5, h6, p {
+  color: var(--primary);
+
+}
+
+.margin-top-0 {
+  margin-top: 0;
 }
 
 /* ====== FLEX ====== */
@@ -90,8 +119,24 @@ ul {
   justify-content: center;
 }
 
+.ai-center {
+  align-items: center;
+}
+
+.ai-flex-end {
+  align-items: flex-end;
+}
+
 .space-between {
   justify-content: space-between;
+}
+
+.flex-end {
+  justify-content: flex-end;
+}
+
+.c-gap-10 {
+  column-gap: 10px;
 }
 
 .c-gap-20 {
@@ -116,6 +161,14 @@ ul {
 
 .width-50 {
   width: 50%;
+}
+
+.width-40 {
+  width: 40%;
+}
+
+.width-25 {
+  width: 25%;
 }
 
 /* ====== NAV ====== */
@@ -268,6 +321,10 @@ input:checked + .slider-dgs:before {
   padding: var(--app-padding);
 }
 
+.page-title-light {
+  color: var(--primary);
+}
+
 .text-wrapper {
   width: 40%;
 }
@@ -379,6 +436,9 @@ select {
   padding-left: 10px;
 }
 
+.primary-border-left {
+  border-left: 1px solid var(--primary);
+}
 
 .ochre-border-left {
   border-left: 1px solid var(--ochre);
@@ -415,4 +475,70 @@ select {
 .project-header > h3{
   font-style: normal;
   margin-top: 0px;
+}
+
+.upcoming {
+  font-weight: 300;
+  font-style: italic;
+  text-align: right;
+  font-size: 36px;
+  margin: 0px;
+}
+
+.txt-align-right {
+  text-align: right;
+}
+
+.padding-right-10 {
+  padding-right: 10px;
+}
+
+.padding-left-10 {
+  padding-left: 10px;
+}
+
+.accessibility-icon {
+  height: 20px;
+  width: 20px;
+}
+
+.dgs-video {
+  background-color: var(--seafoam);
+  border: solid 10px var(--seafoam);
+  border-radius: 10px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.dgs-video > div > p {
+  padding: 0px;
+  margin: 0px;
+}
+
+.dgs-video-controls {
+  padding-bottom: 5px;
+}
+
+video {
+  aspect-ratio: 16 / 9;
+  resize: both;
+}
+
+video::-webkit-media-controls-fullscreen-button {
+  display: none;
+}
+
+/* === CALENDAR === */
+
+.calendar-container {
+  border-top: 1px var(--primary) solid;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  padding-top: 20px;
+}
+
+.performance-title {
+  font-weight: 800;
 }
